[package]
name = "moonlander_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.5"
envy = "0.4.2"
hidapi = "1.3.4"
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
